# lammps-post

./: CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
jupyter-notebooks/: AveChunk-Example.ipynb  ChunkAvg-Example.ipynb  ThermoOut-Example.ipynb
lmp_post/: __init__.py  avechunk.py  chunkavg.py  thermooutput.py
lmpoa/: __init__.py  chunkavg.py
sample-data/ave-chunk/: temperature.avechunk
sample-data/thermo-out/: log.lammps
